--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.11.0",
     "sort-by": "^1.2.0"
   },
